# overreact

./: .coveragerc  .flake8  .gitignore  .gitmodules  AUTHORS.rst  CHANGELOG.rst  CITATION.bib  CONTRIBUTING.md  CONTRIBUTING.rst  INSTALL.rst  LICENSE  README.md  README.rst  ROADMAP.rst  gendocs.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql-analysis.yml  python-package.yml  pythonpackage.yml
data/: 1,3-dichlorobenzene.out  1-bromo-2-chloroethylene.out  1-iodo-2-chloroethylene.out  BF3.out  C60.out  C7H7+.out  CH3·.out  CO2.out  Cl·.out  HCl.out  N2O.out  NHF2.out  PCl5.out  S8.out  SF4.out  SF6.out  benzene.out  benzenetricarbonylchromium.out  boric-acid.out  cyclohexane-chair.out  cyclopentadienyl-.out  diborane.out  dichloromethane.out  ethane-staggered.out  ethylene.out  hydrazine.out  methane.out  phosphorous-oxychloride.out  products.out  reactants.out  tetracarbonylnickel.out  trans-1,2-dichloroethylene.out  transplatin.out  triphenylphosphine.out  ts.out  water.out
data/ethane/B97-3c/: eclipsed.out  model.jk  model.k
data/perez-soto2020/GFN2-xTB/: A_N.out  A_N.xyz  A_N_N.out  A_N_N.xyz  A_N_N_W.out  A_N_N_W.xyz  A_N_W.out  A_N_W.xyz  A_N_W_W.out  A_N_W_W.xyz  A_W.xyz  A_W_W.xyz  Benzaldehyde.out  Benzaldehyde.xyz  Hemiaminal.out  Hemiaminal.xyz  I_N.out  I_N.xyz  I_N_W.out  I_N_W.xyz  I_N_W_W.out  I_N_W_W.xyz  I_W.out  I_W.xyz  I_W_W.out  I_W_W.xyz  I_W_W_W.out  I_W_W_W.xyz  Imine.out  Imine.xyz  Int_N.out  Int_N.xyz  Int_N_W.out  Int_N_W.xyz  Int_W.out  Int_W.xyz  Int_W_W.out  Int_W_W.xyz  NButylamine.out  NButylamine.xyz  (+25 more)
data/perez-soto2020/extra/: benzaldehyde.xyz  n-butylamine.xyz  ts1.out  ts1.xyz  ts1w.xyz  ts1ww.xyz  ts2.out  ts2.xyz  ts2w.xyz  ts2ww.xyz
data/perez-soto2020/si/: A_N.xyz  A_N_N.xyz  A_N_N_W.xyz  A_N_W.xyz  A_N_W_W.xyz  Benzaldehyde.xyz  Hemiaminal.xyz  I_N.xyz  I_N_W.xyz  I_N_W_W.xyz  I_W.xyz  I_W_W.xyz  I_W_W_W.xyz  Imine.xyz  Int_N.xyz  Int_N_W.xyz  Int_W.xyz  Int_W_W.xyz  NButylamine.xyz  N_N_W.xyz  N_W.xyz  TS1.xyz  TS1N.xyz  TS1NW.xyz  TS1W.xyz  TS1WW.xyz  TS2.xyz  TS2N.xyz  TS2NW.xyz  TS2W.xyz  TS2WW.xyz  W_W_W.xyz  Water.xyz  ol0c00367_si_001.txt
data/symmetries/: 1,2-dichloro-1,2-difluoroethane.out  1,2-dichlorobenzene.out  1,4-dichlorobenzene.out  1-butanol.out  1-propanol.out  2-butanol.out  2-methyl-2-propanol.out  2-propanol.out  BH3.out  C8H8-2.out  Cl2SO.out  H3PO4.out  HCCH.out  Mn2F6.out  N-methyl-maleamic-acid.out  N-methyl-maleamic-acid.xyz  OF4Xe.out  SCO.out  Xe.out  Xe.xyz  XeF4.out  acetic-acid.out  acetone.out  acetonitrile.out  allene.out  ammonia.out  chlorobromofluoromethane.out  chloromethane.out  cisplatin.out  cubane.out  cyclohexane-boat.out  cyclooctatetraene.out  dihydrogen.out  dimethyl-sulfoxide.out  ethanol.out  formic-acid.out  hydrogen-peroxide.out  methanol.out  n-hexane.out  n-pentane.out  (+12 more)
docs/: authors.html  changelog.html  conf.py  contributing.html  faq.html  features.rst  foreword.html  genindex.html  index.html  index.rst  installation.html  installation.rst  license.html  license.rst  objects.inv  overreact.html  quickstart.html  search.html  search.js  searchindex.js  support.rst  thermochemistry.html  zbibliography.html
docs/_sources/: foreword.rst.txt  index.rst.txt  license.rst.txt  quickstart.rst.txt
docs/_sources/tutorials/: 1-rate_constant.rst.txt  2-equilibrium-constants.rst.txt  3-reaction-symmetry.rst.txt  (+1 more)
docs/_static/: documentation_options.js
docs/authors/: index.html
docs/changelog/: index.html
docs/contributing/: index.html
docs/examples/: hydrogen-abstraction-microkinetics.py  qrrho-enthalpy.py
docs/faq/: index.html
docs/foreword/: index.html
docs/genindex/: index.html
docs/installation/: index.html
docs/license/: index.html
docs/notebooks/: #2 A mini language for chemical reactions.ipynb  #4 overreact and cclib.ipynb
docs/overreact/: _cli.html  _constants.html  _datasets.html  _misc.html  api.html  coords.html  core.html  io.html  rates.html  simulate.html  thermo.html  tunnel.html
docs/quickstart/: index.html
docs/search/: index.html
docs/thermochemistry/: index.html
docs/tutorials/: 00-basic.rst  01-basic.rst  1-accurate-complex-equilibria.rst  1-rate_constant.html  1-rate_constant.rst  2-equilibrium-constants.html  2-equilibrium-constants.rst  2-quantum_tunnel.html  2-quantum_tunnel.rst  3-degree-of-rate-control.rst  3-reaction-symmetry.html  4-curtin-hammett.html  4-curtin-hammett.rst  collins-kimball.html  hydrogen-abstraction.html  index.html  index.rst
docs/zbibliography/: index.html
docsrc/: conf.py  index.rst  quickstart.rst  thermochemistry.rst  zbibliography.rst
docsrc/_static/: bibliography.bib
docsrc/examples/: hydrogen-abstraction-arrhenius.py  hydrogen-abstraction-drc.py  hydrogen-abstraction-microkinetics.py  qrrho-entropy.py
docsrc/notebooks/: #1 Solving complex kinetics schemes.ipynb  #2 A mini language for chemical reactions.ipynb  #3 Correcting for systematic error in computational microkinetics.ipynb  #4 overreact and cclib.ipynb  #5 pH.ipynb  1 solving complex kinetics schemes.ipynb  2 a mini language for chemical reactions.ipynb  3 correcting for systematic error in computational microkinetics.ipynb  4 overreact and cclib.ipynb  5 pH.ipynb  6 DRC.ipynb  7 QRRHO.ipynb
docsrc/tutorials/: 1-rate_constant.rst  2-equilibrium-constants.rst  2-quantum_tunnel.rst  4-curtin-hammett.rst  collins-kimball.rst  hydrogen-abstraction.rst
overreact/: __init__.py  _cli.py  _constants.py  _datasets.py  _misc.py  api.py  cli.py  constants.py  coords.py  core.py  datasets.py  io.py  misc.py  rates.py  simulate.py  thermo.py  tunnel.py
overreact/_thermo/: __init__.py  _gas.py  _solv.py
overreact/thermo/: __init__.py  _gas.py  _solv.py
tests/: test_api.py  test_cli.py  test_constants.py  test_coords.py  test_core.py  test_datasets.py  test_io.py  test_misc.py  test_rates.py  test_regressions.py  test_simulate.py  test_thermo.py  test_thermo_gas.py  test_thermo_solv.py  test_tunnel.py
(+89 files in other folders)
